--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "drf-spectacular-auth"
-version = "1.2.1"
-description = "Enhanced Authentication UI for DRF Spectacular with AWS Cognito support and Django integration"
+version = "1.3.0"
+description = "Secure Authentication UI for DRF Spectacular with HttpOnly Cookie support, AWS Cognito integration, and XSS protection"
 readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "MIT"}
